<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_foreground"
    tools:context=".CatTranslatorActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/to_cat_language"
        android:textAlignment="center"
        android:textColor="#ff5c6e"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:text="@string/prepared_phrases"
        android:textAlignment="center"
        android:textColor="#ff5c6e"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042"/>

    <ListView
        android:id="@+id/cat_sounds_LV"
        android:layout_width="170dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122"/>

    <TextView
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:text="@string/your_phrase"
        android:textAlignment="center"
        android:textColor="#ff5c6e"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042"/>

    <EditText
        android:id="@+id/enter_phrase_ET"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:hint="@string/enter_phrase"
        android:inputType="text"
        android:textColor="#ff5c6e"
        android:textColorHint="#ff5c6e"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086"/>

    <FrameLayout
        android:layout_width="170dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_shape"
            android:onClick="sayPhrase"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/say_phrase"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp"/>

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/from_cat_language"
        android:textAlignment="center"
        android:textColor="#ff5c6e"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"/>


    <FrameLayout
        android:layout_width="170dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_shape"
            android:onClick="startOrStopRecord"/>

        <TextView
            android:id="@+id/record_TV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </FrameLayout>

    <ImageView
        android:id="@+id/record_IV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"/>

    <TextView
        android:id="@+id/record_timer_TV"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:textAlignment="center"
        android:textColor="#ff5c6e"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"/>

    <TextView
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:text="@string/cat_said"
        android:textAlignment="center"
        android:textColor="#ff5c6e"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559"/>

    <ScrollView
        android:layout_width="170dp"
        android:layout_height="250dp"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.896">

        <TextView
            android:id="@+id/cat_said_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff5c6e"
            android:textSize="15sp"
            android:textStyle="italic"/>

    </ScrollView>

    <TextView
        android:id="@+id/note_TV"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:textColor="#ff5c6e"
        android:textSize="13sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>